--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2569,7 +2569,7 @@ input, select, textarea {
 		.work-item p {
 			font-size: 0.8em;
 			line-height: 1.5em;
-			margin: 0;
+			margin: 0 0 0.5em 0;
 		}
 
 /* Header */
@@ -2604,7 +2604,7 @@ input, select, textarea {
 		position: fixed;
 		text-align: right;
 		top: 0;
-		width: 35%;
+		width: 28%;
 	}
 
 		#header > * {
@@ -2640,7 +2640,12 @@ input, select, textarea {
 
 		#header .image.avatar {
 			margin: 0 0 1em 0;
-			width: 6.25em;
+			width: 10em;
+			filter: grayscale(100%); /* Convert the image to black and white */
+			transition: filter 0.5s ease; /* Add a smooth transition effect */
+		}
+		#header:hover .image.avatar {
+			filter: grayscale(0%); /* Reset the filter to show the original color on hover */
 		}
 
 /* Footer */
