--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2036,14 +2036,19 @@ input, select, textarea {
 		}
 
 /* Image */
-
+	
 	.image {
 		border-radius: 0.35em;
 		border: 0;
 		display: inline-block;
 		position: relative;
+		filter: grayscale(100%);
+		transition: filter 0.5s
 	}
-
+	.image:hover {
+		filter: grayscale(0%);
+	}
+	
 		.image:before {
 			-moz-transition: opacity 0.2s ease-in-out;
 			-webkit-transition: opacity 0.2s ease-in-out;
@@ -2087,15 +2092,16 @@ input, select, textarea {
 				text-decoration: none;
 				top: 50%;
 				white-space: nowrap;
+				
 			}
 
 			.image.thumb:hover:after {
-				opacity: 1.0;
+				opacity: 1;
 			}
 
 			.image.thumb:hover:before {
 				background: url("images/overlay.png"), url("images/overlay.png");
-				opacity: 1.0;
+				opacity: 0.5;
 			}
 
 		.image img {
