cleaning up files from template

--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,6 @@
 @import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap');
 
-/*****---------------------------------------- 1) font-family: 'Rajdhani', sans-serif;
- 2) font-family: 'Poppins', sans-serif;
- ----------------------------------------*****/
-
-
-/*--------------------------------------------------------------------- import Files ---------------------------------------------------------------------*/
-
-@import url(animate.min.css);
-@import url(normalize.css);
-@import url(icomoon.css);
-@import url(font-awesome.min.css);
-@import url(meanmenu.css);
-@import url(owl.carousel.min.css);
-@import url(swiper.min.css);
-@import url(slick.css);
-@import url(jquery.fancybox.min.css);
-@import url(jquery-ui.css);
-@import url(nice-select.css);
-
 /*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
 
 * {
@@ -297,8 +278,8 @@ button {
      background: darkslategray;
      border-radius: 100%;
      box-shadow: 3px 3px 5px darkslategray;
-     height: 5vw;
-     width: 5vw;
+     height: 50px;
+     width: 50px;
      margin: 20px;
      cursor: pointer;
      transition: transform 0.5s ease; /* Smooth transition effect */
