getting comment writer setup

--- a/src/App.css
+++ b/src/App.css
@@ -572,11 +572,14 @@ button {
 
 /** end footer **/
 /** comment Writer **/
-#commentWriterApp .factorGroup,#studentInfoDiv,#generateDiv{
-  background:#E8E9EE;
+.factorGroup,#studentInfoDiv,#generateDiv{
+  background:#e8e9ee;
 }
-#commentWriterApp .input-group-text{
+.input-group-text{
   background:#CAD6E2;
+}
+.infoBubble{
+  width:20px;
 }
 @media (min-width: 768px) {
   .sticky-column {
