--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,7 +25,6 @@ body {
 }
 
 a {
-  color: #1f1f1f;
   text-decoration: none !important;
   outline: none !important;
   -webkit-transition: all 0.3s ease-in-out;
@@ -47,7 +46,6 @@ h6 {
   padding: 0 0 10px 0;
   font-weight: normal;
   line-height: normal;
-  color: #111111;
   margin: 0;
 }
 
@@ -89,7 +87,6 @@ h3 a,
 h4 a,
 h5 a,
 h6 a {
-  color: #212121;
   text-decoration: none !important;
   opacity: 1;
 }
@@ -114,7 +111,6 @@ p {
 }
 
 a {
-  color: #222222;
   text-decoration: none;
   outline: none !important;
 }
@@ -439,14 +435,14 @@ button {
   cursor: pointer;
 }
 
-.titlepage h2 {
+h2.white {
   font-size: 45px;
   color: white;
   line-height: 55px;
   font-weight: 800;
   padding: 0;
 }
-.titlepage h3 {
+h3.white {
   text-align: left;
   font-size: 45px;
   color: white;
@@ -619,7 +615,7 @@ button {
   .bann-img-col {
     height: auto;
   }
-  .titlepage h2 {
+  h2.white {
     font-size: 38px;
     line-height: 41px;
   }
@@ -637,7 +633,7 @@ button {
   #submit-button {
     max-width: 250px;
   }
-  .titlepage h2 {
+  h2.white {
     font-size: 30px;
     line-height: 41px;
   }
@@ -662,7 +658,7 @@ button {
     font-size: 57px;
     line-height: 81px;
   }
-  .titlepage h2 {
+  h2.white {
     font-size: 30px;
     line-height: 41px;
   }
